Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6126

softkeys: combobox at the bottom is resized away on landscape mode (5800)

    XMLWordPrintable

Details

    • 92c2102f5b1f3ab5ee1ac7a56aaabcd656804d04

    Description

      To reproduce:

      • launch softkeys from fluidlauncher
      • switch to landscape mode
      • note how the combobox is there for a split second, and then resized down below the screen

      See attached screenshot.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            riskedal Espen Riskedal (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes