Made layout of the Softkeys example more compact

Softkeys example didn't fit on the screen in landscape mode due to
the widget minimum size enforcement done by Qt. Changed the layout
of the example from QVBoxLayout to QGridlayout to make better use of
the available space. Also shortened button texts.

Task-number: QTBUG-6126
Reviewed-by: Janne Anttila